Switch main-bosh-docker to be an independent image
Avoids many unnecessary layers and packages, reducing to 0.6 GB (from 2.2 GB).
If downstream users were relying on packages, they'll want to build their own
images using this as the base image.

--- a/ci/docker/main-bosh-docker/Dockerfile
+++ b/ci/docker/main-bosh-docker/Dockerfile
@@ -1,8 +1,7 @@
-FROM bosh/main-ruby-go
+FROM ubuntu:xenial
 
-ADD ./install-docker.sh /tmp/install-docker.sh
-RUN /tmp/install-docker.sh
-RUN rm /tmp/install-docker.sh
+ADD install.sh /tmp/install.sh
+RUN /tmp/install.sh && rm /tmp/install.sh
 
 COPY bosh /usr/local/bin/
 RUN chmod +x /usr/local/bin/bosh
