Update GcscliBlobstoreClient concourse task to specify project
An assumption was that the project associated with the service
account would be used. However, this is not the case.

This corrects that by adding the 'google_project' parameteter.

--- a/ci/tasks/test-gcs-blobstore-client-integration.yml
+++ b/ci/tasks/test-gcs-blobstore-client-integration.yml
@@ -11,4 +11,5 @@ inputs:
 run:
   path: bosh-src/ci/tasks/test-gcs-blobstore-client-integration.sh
 params:
+  google_project: replace-me
   google_json_key_data: replace-me
