--- a/.final_builds/jobs/director/index.yml
+++ b/.final_builds/jobs/director/index.yml
@@ -259,6 +259,10 @@ builds:
     version: c50e80ce722c92b9dac722d461f3de14bbdf131a
     blobstore_id: 1a17151d-968b-4132-87ec-1b57de5281e4
     sha1: e7ba24f01c6512d62855647d6080476b43d02d3c
+  cad5d54e9795b3e2f3aa68d440a2c1dcab626ffa:
+    version: cad5d54e9795b3e2f3aa68d440a2c1dcab626ffa
+    blobstore_id: 622f5436-b3fa-4248-4340-987570fafe61
+    sha1: 4f90404a17a965f63a9cac131ac35145ce0e8d6b
   cc1da8b6e4aefd733c9bf4a9c49d7890cc1318d0:
     version: cc1da8b6e4aefd733c9bf4a9c49d7890cc1318d0
     blobstore_id: 886ea3b7-46fa-4e22-9f2a-4d19c5e7a011
