--- a/.final_builds/packages/director/index.yml
+++ b/.final_builds/packages/director/index.yml
@@ -1059,6 +1059,10 @@ builds:
     version: e48d6a144e26261912ae833aa427ef1babc84ec0
     blobstore_id: cb409b27-1640-4276-71b2-46fd6c1aa820
     sha1: ba98b6a7e730ea086c6d17e23731c41e4ba66bb8
+  e579bb28f96f52b75ca5900dca2fddd7f3accb89:
+    version: e579bb28f96f52b75ca5900dca2fddd7f3accb89
+    blobstore_id: 9db2a3d4-4a5f-4826-4224-5cdf3f284c4e
+    sha1: 7957ef114f6b69b785434a634f11cd6fb18b5fb6
   e5cd68a21c9afefb3080e33766b127ae7c8b3780:
     version: e5cd68a21c9afefb3080e33766b127ae7c8b3780
     blobstore_id: c11e8eab-5641-4584-87b0-508e16c2261c
