--- a/releases/index.yml
+++ b/releases/index.yml
@@ -543,6 +543,8 @@ builds:
     version: "162"
   e703b2c4-f18e-41e5-836c-59689f88394a:
     version: "220"
+  e7046648-161f-4a2c-5513-1d3c06a44de1:
+    version: "262.2"
   e802a7e147e7fd70e7484fcbaaa65c4f85cd2191:
     version: "45"
   e87ff8de-160c-4096-a29e-753edb103487:
