Match stemcell pipeline to concourse configuration
Signed-off-by: Tom Viehman <tviehman@pivotal.io>

--- a/ci/pipelines/stemcells/pipeline.yml
+++ b/ci/pipelines/stemcells/pipeline.yml
@@ -68,8 +68,8 @@ shared:
     tags: [vsphere-v5.1]
     file: pipelines/vsphere/tasks/prepare-director.yml
     params: &prepare-director-params
-      BOSH_USER:                            {{stemcell-test-director-username}}
-      BOSH_PASSWORD:                        {{stemcell-test-director-password}}
+      BOSH_CLIENT:                          {{stemcell-test-director-username}}
+      BOSH_CLIENT_SECRET:                   {{stemcell-test-director-password}}
       BOSH_VSPHERE_VCENTER:                 {{vcenter-ip}}
       BOSH_VSPHERE_VCENTER_USER:            {{vcenter-user}}
       BOSH_VSPHERE_VCENTER_PASSWORD:        {{vcenter-password}}
@@ -95,8 +95,8 @@ shared:
     file: pipelines/vsphere/tasks/prepare-bats.yml
     params: &prepare-bats-params
       BAT_VCAP_PASSWORD:      {{bat-vcap-password}}
-      BOSH_USER:              {{stemcell-test-director-username}}
-      BOSH_PASSWORD:          {{stemcell-test-director-password}}
+      BOSH_CLIENT:            {{stemcell-test-director-username}}
+      BOSH_CLIENT_SECRET:     {{stemcell-test-director-password}}
 
   - &run-bats
     task: run-bats
@@ -228,9 +228,9 @@ jobs:
       - aggregate:
         - get: version
           passed:
+            - bats-ubuntu
             - test-stemcells
             # - bats-centos
-            - bats-ubuntu
         - get: bosh-src
       - task: copy-artifacts
         file: bosh-src/ci/pipelines/stemcells/tasks/publish.yml
