Trigger stemcell building on changes to bosh-src
[#148087233](https://www.pivotaltracker.com/story/show/148087233)

Signed-off-by: James Young <jayoung@pivotal.io>

--- a/ci/pipelines/stemcells/pipeline.yml
+++ b/ci/pipelines/stemcells/pipeline.yml
@@ -115,6 +115,7 @@ jobs:
     serial: true
     plan:
       - get: bosh-src
+        trigger: true
       - get: version
         params:
           bump: {{stemcell_version_semver_bump}}
