--- a/releases/index.yml
+++ b/releases/index.yml
@@ -343,6 +343,8 @@ builds:
     version: "58"
   9828318f-1a40-43ed-91d9-22546972d3b6:
     version: "256.2"
+  98abddd9-e444-44df-4a80-ca2ce09aae9b:
+    version: "262.3"
   9936c4bc-aee0-48dd-8cbf-9cc6d8d1953c:
     version: "231"
   9b12286c2f3b83e091190ccabc83e08d91371b69:
