Adding ruby-dev in bosh-load-tests docker image
Required package for `gem install`s to work later.

We moved main-bosh-docker to xenial from main-ruby-go; this removed chruby.
This commit fixes incidental breakage.

Signed-off-by: James Young <jayoung@pivotal.io>

--- a/ci/docker/bosh-load-tests/Dockerfile
+++ b/ci/docker/bosh-load-tests/Dockerfile
@@ -4,6 +4,6 @@ FROM bosh/main-bosh-docker
 # mysql user: root/password
 RUN echo 'mysql-server mysql-server/root_password password password' | debconf-set-selections
 RUN echo 'mysql-server mysql-server/root_password_again password password' | debconf-set-selections
-RUN apt-get update && apt-get install -y mysql-server && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y mysql-server ruby-dev && rm -rf /var/lib/apt/lists/*
 
 RUN sed -i 's/bind-address.*/bind-address = 0.0.0.0/' /etc/mysql/my.cnf && echo "max_connections         = 400" >> /etc/mysql/my.cnf
