Add go to PATH in main-bosh-docker image
Signed-off-by: Danny Berger <dberger@pivotal.io>

--- a/ci/docker/main-bosh-docker/Dockerfile
+++ b/ci/docker/main-bosh-docker/Dockerfile
@@ -2,6 +2,8 @@ FROM ubuntu:xenial
 
 ADD install.sh /tmp/install.sh
 RUN /tmp/install.sh && rm /tmp/install.sh
+ENV GOROOT /usr/local/go
+ENV PATH $GOROOT/bin:$PATH
 
 COPY bosh /usr/local/bin/
 RUN chmod +x /usr/local/bin/bosh
