--- a/ci/tasks/test-gcs-blobstore-client-integration.yml
+++ b/ci/tasks/test-gcs-blobstore-client-integration.yml
@@ -4,7 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: everlag/bosh-ci-dev # TODO: back to 'bosh/blobstore_client'
+    repository: bosh/blobstore_client
 
 inputs:
   - name: bosh-src
