--- a/ci/docker/bosh-load-tests/Dockerfile
+++ b/ci/docker/bosh-load-tests/Dockerfile
@@ -6,4 +6,5 @@ RUN echo 'mysql-server mysql-server/root_password password password' | debconf-s
 RUN echo 'mysql-server mysql-server/root_password_again password password' | debconf-set-selections
 RUN apt-get update && apt-get install -y mysql-server ruby-dev build-essential && rm -rf /var/lib/apt/lists/*
 
-RUN sed -i 's/bind-address.*/bind-address = 0.0.0.0/' /etc/mysql/my.cnf && echo "max_connections         = 400" >> /etc/mysql/my.cnf
+RUN sed -i 's/bind-address.*/bind-address = 0.0.0.0/' /etc/mysql/mysql.conf.d/mysqld.cnf && \
+  echo "max_connections = 400" >> /etc/mysql/mysql.conf.d/mysqld.cnf
