add bosh/agent docker image to ci pipeline
[#149319577](https://www.pivotaltracker.com/story/show/149319577)

Signed-off-by: Rob Day-Reynolds <rdayreynolds@pivotal.io>

--- a/ci/pipelines/docker-images/pipeline.yml
+++ b/ci/pipelines/docker-images/pipeline.yml
@@ -261,6 +261,18 @@ jobs:
         get_params:
           skip_download: true
 
+  - name: build-bosh-agent
+    public: true
+    serial: true
+    plan:
+      - get: bosh-agent-src
+        trigger: true
+      - put: bosh-agent
+        params:
+          build: "bosh-agent-src/ci/docker"
+        get_params:
+          skip_download: true
+
 resources:
   - name: bosh-src
     type: git
@@ -275,6 +287,14 @@ resources:
     type: git
     source:
       uri: https://github.com/cloudfoundry/bosh-utils
+      branch: develop
+      paths:
+        - "ci/docker"
+
+  - name: bosh-agent-src
+    type: git
+    source:
+      uri: https://github.com/cloudfoundry/bosh-agent
       branch: develop
       paths:
         - "ci/docker"
@@ -424,6 +444,14 @@ resources:
     type: docker-image
     source:
       repository: bosh/utils
+      email: {{dockerhub_email}}
+      username: {{dockerhub_username}}
+      password: {{dockerhub_password}}
+
+  - name: bosh-agent
+    type: docker-image
+    source:
+      repository: bosh/agent
       email: {{dockerhub_email}}
       username: {{dockerhub_username}}
       password: {{dockerhub_password}}
