Enable mutual TLS
- Director and Health Monitor now connect to NATs using mutual TLS
- Send client certificate information to Agent

[#149182955](https://www.pivotaltracker.com/story/show/149182955)

Signed-off-by: Sameer Vohra <svohra@pivotal.io>

--- a/src/bosh-director/spec/assets/test-director-config.yml
+++ b/src/bosh-director/spec/assets/test-director-config.yml
@@ -58,4 +58,6 @@ nats_ca: |
   nats ca contents
   end nats ca
 nats_server_ca_path: 'some-nats-server-ca-path'
-
+nats_tls:
+  private_key_path: /path/to/sample_nats_tls_private_key
+  certificate_path: /path/to/sample_nats_tls_certificate.pem
