--- a/src/bosh-dev/assets/sandbox/nats_server/certs/manifest.yml
+++ b/src/bosh-dev/assets/sandbox/nats_server/certs/manifest.yml
@@ -3,30 +3,35 @@ variables:
   type: certificate
   options:
     is_ca: true
+- name: nats
+  type: certificate
+  options:
+    ca: default_ca
+    alternative_names:
+    - ((hostname))
+    extended_key_usage:
+      - server_auth
 - name: director_client
   type: certificate
   options:
     ca: default_ca
     alternative_names:
-    - localhost
-    - 127.0.0.1
+    - ((hostname))
     extended_key_usage:
-      - server_auth
+      - client_auth
 - name: hm_client
   type: certificate
   options:
     ca: default_ca
     alternative_names:
-    - localhost
-    - 127.0.0.1
+    - ((hostname))
     extended_key_usage:
-      - server_auth
+      - client_auth
 - name: agent_client
   type: certificate
   options:
     ca: default_ca
     alternative_names:
-    - localhost
-    - 127.0.0.1
+    - ((hostname))
     extended_key_usage:
-      - server_auth
+      - client_auth
