Refactor nats tls spec properties
- Update bosh, hm, nats jobs

[#149182955](https://www.pivotaltracker.com/story/show/149182955)

Signed-off-by: Sameer Vohra <svohra@pivotal.io>

--- a/src/bosh-monitor/spec/assets/sample_config.yml
+++ b/src/bosh-monitor/spec/assets/sample_config.yml
@@ -6,7 +6,9 @@ mbus:
   endpoint: nats://127.0.0.1:4222
   user: test-user
   password: test-password
-  ca_path: test-ca-path
+  server_ca_path: test-ca-path
+  client_certificate_path: test-certificate-path
+  client_private_key_path: test-private_key-path
 
 director: &director
   endpoint: http://127.0.0.1:25555
