--- a/src/bosh-director/spec/assets/test-director-config.yml
+++ b/src/bosh-director/spec/assets/test-director-config.yml
@@ -53,11 +53,11 @@ config_server:
 record_events: true
 version: '0.0.2'
 mbus: 'nats://some-user:some-pass@some-nats-uri:1234'
-nats_ca: |
-  begin nats ca
-  nats ca contents
-  end nats ca
-nats_server_ca_path: 'some-nats-server-ca-path'
-nats_tls:
-  private_key_path: /path/to/sample_nats_tls_private_key
-  certificate_path: /path/to/sample_nats_tls_certificate.pem
+
+nats:
+  server_ca_path: '/path/to/server_ca_path'
+  client_certificate_path: '/path/to/director_certificate_path'
+  client_private_key_path: '/path/to/director_private_key_path'
+  agent:
+    client_certificate_path: '/path/to/agent_certificate_path'
+    client_private_key_path: '/path/to/agent_private_key_path'
