add BRAT for dns resolution of template link addrs
[#149763887](https://www.pivotaltracker.com/story/show/149763887)

Signed-off-by: Difan Zhao <dzhao@pivotal.io>

--- a/ci/docker/main-bosh-docker/inner-bosh-ops.yml
+++ b/ci/docker/main-bosh-docker/inner-bosh-ops.yml
@@ -82,3 +82,8 @@
 - type: replace
   path: /instance_groups/name=bosh/properties/director/cpi_job?
   value: docker_cpi
+
+- type: replace
+  path: /instance_groups/name=bosh/properties/director/local_dns?/enabled?
+  value: true
+
