Add bosh-gcscli blob
[#149965542](https://www.pivotaltracker.com/story/show/149965542)

Signed-off-by: Tom Viehman <tviehman@pivotal.io>

--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -1,3 +1,7 @@
+bosh-gcscli/bosh-gcscli-0.0.2-linux-amd64:
+  size: 12777526
+  object_id: 32a1f288-c0ba-4d44-6a18-fc699afa4778
+  sha: a151d3829f53b68bd15edfd3e6a527d187591992
 davcli/davcli-0.0.6-linux-amd64:
   size: 8705864
   object_id: fbe6b42b-cd0e-47a6-a0b4-501be4b52426
