add blobstore client test for gcs
[#149965542](https://www.pivotaltracker.com/story/show/149965542)

Signed-off-by: Difan Zhao <dzhao@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -292,6 +292,11 @@ jobs:
         file: bosh-src/ci/tasks/test-local-blobstore-client-integration.yml
       - task: test-dav
         file: bosh-src/ci/tasks/test-dav-blobstore-client-integration.yml
+      - task: test-gcs
+        file: bosh-src/ci/tasks/test-gcs-blobstore-client-integration.yml
+        params:
+          google_project: {{blobstore_client_google_project}}
+          google_json_key_data: {{blobstore_client_google_json_key_data}}
 
   - name: blobstore-performance
     public: true
