Final release 262.4 based on 262.x

--- a/.final_builds/jobs/director/index.yml
+++ b/.final_builds/jobs/director/index.yml
@@ -247,6 +247,10 @@ builds:
     version: b753c1f340b2a96663043163b30268c2a73f8861
     blobstore_id: 6deeb540-6809-4e8c-a4a7-386f24cee9bc
     sha1: 5b505fb226fd25a0f38152ecd8effea02e6df06b
+  b98cf444ebef18d3b401d4ce75f7351821e5dc2a:
+    version: b98cf444ebef18d3b401d4ce75f7351821e5dc2a
+    blobstore_id: 6e92778e-23b4-448b-784d-bc405714910d
+    sha1: bbb11e86000ef1cc229542faa3544f1bc4093140
   b994f6bfc668b2932509f51b6b173127fbf53806:
     version: b994f6bfc668b2932509f51b6b173127fbf53806
     blobstore_id: ee940d1d-1aff-4306-b1ea-487fecc2068e
