--- a/releases/index.yml
+++ b/releases/index.yml
@@ -73,6 +73,8 @@ builds:
     version: "112"
   274cbf9640a23e5287c692bc44f7e155545e199e:
     version: "26"
+  278166ef-5cb1-4ff6-7d13-15c7935b579c:
+    version: "262.4"
   27d3af15-dca6-4dd6-9008-83476d87fd4d:
     version: "257.1"
   2902a03d-1f78-4c15-4ff4-7d11ebcad013:
