Final release 261.5 on 261.x

--- a/.final_builds/packages/director/index.yml
+++ b/.final_builds/packages/director/index.yml
@@ -1015,6 +1015,10 @@ builds:
     version: "42"
     blobstore_id: 9bf9aa80-388b-48e9-9ab7-0c91ab15eb77
     sha1: f62f620ff9e94c605322d6f5b0fd9f2c41cd3d3b
+  dae951471827e2c49209a9bb2779fcc8c231abb0:
+    version: dae951471827e2c49209a9bb2779fcc8c231abb0
+    blobstore_id: 84993a6f-b57a-445b-5df6-675a1605ce64
+    sha1: 9d61d927ced0caacfe5e2534a8d1f160bd470466
   db06b78edcf71fc73af9dcb014065aa8ac125dad:
     version: db06b78edcf71fc73af9dcb014065aa8ac125dad
     blobstore_id: 3e4b38cb-c98c-4a13-add9-fa4cc7dd2a46
