--- a/.final_builds/packages/health_monitor/index.yml
+++ b/.final_builds/packages/health_monitor/index.yml
@@ -847,6 +847,10 @@ builds:
     version: "15"
     blobstore_id: c614a705-c417-455b-bd3e-503e5cef0efc
     sha1: 0271e52e7267d97c81bf416079dcae7ab3fd6da8
+  bc1ba57c3c1422167b52fa6b2e9bbb0d83986884:
+    version: bc1ba57c3c1422167b52fa6b2e9bbb0d83986884
+    blobstore_id: 8eb87f06-2940-4d00-7906-ef772cf8dd1b
+    sha1: 46773d381f4d33e428b8d2a6632694cd1e1c2f8b
   bd185460356a86b807d445853ed4d6ec035d7d0a:
     version: "56"
     blobstore_id: 1167da4b-ac60-4074-a2fe-db8b192710cc
