--- a/.final_builds/packages/registry/index.yml
+++ b/.final_builds/packages/registry/index.yml
@@ -183,6 +183,10 @@ builds:
     version: "58"
     blobstore_id: e12c5288-3a95-4860-9cb1-21580d0ab0fa
     sha1: 08791f0c4bca873591dc4fd6a5581ebb70f66aaf
+  2dee08e308df2372a76e27d466d8fbbfe0fa7af5:
+    version: 2dee08e308df2372a76e27d466d8fbbfe0fa7af5
+    blobstore_id: 660e2143-acf0-4b5a-5801-a6d13e00b529
+    sha1: 4d6c81b0902b4da10d3f4bf707cc37acd737ef26
   304e644c9eec4b07b3f1750118874e54f46b8378:
     version: 304e644c9eec4b07b3f1750118874e54f46b8378
     blobstore_id: 3f1c3853-ada8-42fe-a9a7-86b6301a19dd
