--- a/releases/index.yml
+++ b/releases/index.yml
@@ -529,6 +529,8 @@ builds:
     version: "178"
   dfad3f59-fe62-45d1-9d10-e200a69ebc68:
     version: "209"
+  dfd8bc7f-19a4-414f-5eca-6feb119e8919:
+    version: "261.5"
   e23c7fca-8f19-463f-b479-5e04049ffaa6:
     version: "255.2"
   e269d4db-6ce8-43bd-7971-0de7cb4ce9c6:
