Final release 260.8 on 260.x

--- a/.final_builds/packages/director/index.yml
+++ b/.final_builds/packages/director/index.yml
@@ -55,6 +55,10 @@ builds:
     version: "19"
     blobstore_id: 0ee9cd95-7116-4271-bce4-669268d3cf13
     sha1: 4de517c8b485e16b804491a03fa8d8100d5ae341
+  0f092bbba7891c551ce5cf739c49fc0e96454143:
+    version: 0f092bbba7891c551ce5cf739c49fc0e96454143
+    blobstore_id: 2d6650c7-bc91-4767-4ecb-d4219528686b
+    sha1: 7dfe476cd7dcc9ae3999607406e069382bc5438e
   0f1b09ec6bb28ea13d2e919e71dd7ccd8ab49313:
     version: 0f1b09ec6bb28ea13d2e919e71dd7ccd8ab49313
     blobstore_id: c83497a9-ab7f-4ccc-ad3a-85bf058af7cb
