--- a/releases/index.yml
+++ b/releases/index.yml
@@ -303,6 +303,8 @@ builds:
     version: "256"
   84fcfb0e-6a95-4ca4-b501-de607be32277:
     version: "171"
+  86663f68-4d36-4d29-42be-9fc73f44de9f:
+    version: "260.8"
   88231922-cb9a-47bb-a74d-0d1f466afc3a:
     version: "222"
   8a3f7bc77714e234002ab5f6b4e1b89a79db2060:
