--- a/.final_builds/packages/postgres-9.4/index.yml
+++ b/.final_builds/packages/postgres-9.4/index.yml
@@ -27,4 +27,8 @@ builds:
     version: ded764a075ae7513d4718b7cf200642fdbf81ae4
     blobstore_id: 267f9c83-cd2f-4b25-7761-7da912e61a22
     sha1: be4342c24e9bc546c2b666b6c408b584bf0ae0f2
+  e54ce9fe99fdbc2aa55413afd0492dd3356810b9:
+    version: e54ce9fe99fdbc2aa55413afd0492dd3356810b9
+    blobstore_id: e35981ea-d1e9-452b-4f91-8dc1405c31d8
+    sha1: d7e473c0995ee1f52698e8c22318eb34dc6d1a83
 format-version: "2"
