--- a/src/bosh-director/spec/assets/test-director-config.yml
+++ b/src/bosh-director/spec/assets/test-director-config.yml
@@ -58,6 +58,5 @@ nats:
   server_ca_path: '/path/to/server_ca_path'
   client_certificate_path: '/path/to/director_certificate_path'
   client_private_key_path: '/path/to/director_private_key_path'
-  agent:
-    client_certificate_path: '/path/to/agent_certificate_path'
-    client_private_key_path: '/path/to/agent_private_key_path'
+  client_ca_certificate_path: '/path/to/client_ca_certificate_path'
+  client_ca_private_key_path: '/path/to/client_ca_private_key_path'
