Switch to using bosh/main dokcer image in tasks
- A different image was used before since bundler version
  was old for the new eventmachine needed.

[#150457689](https://www.pivotaltracker.com/story/show/150457689)

Signed-off-by: Jamil Shamy <jshamy@pivotal.io>

--- a/ci/tasks/test-unit.yml
+++ b/ci/tasks/test-unit.yml
@@ -4,7 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: jamlo/bosh-complete-ci
+    repository: bosh/main
 
 inputs:
   - name: bosh-src
