Update NATS certificate in sandbox to meet bosh-agent expectations for the common name in the certificate.
[#150333287](https://www.pivotaltracker.com/story/show/150333287)

Signed-off-by: Gabriel Dumitrescu <gdumitrescu@pivotal.io>

--- a/src/bosh-dev/assets/sandbox/nats_server/certs/manifest.yml
+++ b/src/bosh-dev/assets/sandbox/nats_server/certs/manifest.yml
@@ -17,6 +17,8 @@ variables:
   options:
     ca: default_ca
     common_name: default.director.bosh
+    alternative_names:
+    - ((hostname))
     extended_key_usage:
       - client_auth
 - name: hm_client
@@ -24,5 +26,7 @@ variables:
   options:
     ca: default_ca
     common_name: default.hm.bosh
+    alternative_names:
+    - ((hostname))
     extended_key_usage:
       - client_auth
