Fix legacy sandbox test reset logic.  Add full permissions client for testing NATS traffic.
[#150329220](https://www.pivotaltracker.com/story/show/150329220)

Signed-off-by: Dale Wick <dwick@pivotal.io>

--- a/src/bosh-dev/assets/sandbox/nats_server/certs/manifest.yml
+++ b/src/bosh-dev/assets/sandbox/nats_server/certs/manifest.yml
@@ -30,3 +30,10 @@ variables:
     - ((hostname))
     extended_key_usage:
       - client_auth
+- name: test_client
+  type: certificate
+  options:
+    ca: default_ca
+    common_name: default.integration.test.bosh
+    extended_key_usage:
+    - client_auth
