Fix bosh-cli pipeline resource
It was previously failing to find versions

Signed-off-by: Danny Berger <dberger@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -680,7 +680,7 @@ resources:
   - name: gocli-release-bucket-linux
     type: s3
     source:
-      versioned_file: bosh-cli-0.0.101-linux-amd64
+      regexp: bosh-cli-(0.0.101)-linux-amd64
       bucket: bosh-cli-artifacts
 
   - name: bosh-cli
