ensure that the stemcell version matches branch
[#150346407](https://www.pivotaltracker.com/story/show/150346407)

--- a/ci/pipelines/stemcells/pipeline.yml
+++ b/ci/pipelines/stemcells/pipeline.yml
@@ -233,6 +233,8 @@ jobs:
             - test-stemcells
             # - bats-centos
         - get: bosh-src
+      - task: assert-version-aligned
+        file: bosh-src/ci/tasks/assert-version-aligns.yml
       - task: copy-artifacts
         file: bosh-src/ci/pipelines/stemcells/tasks/publish.yml
         params:
