--- a/ci/pipelines/gnatsd/tasks/test.yml
+++ b/ci/pipelines/gnatsd/tasks/test.yml
@@ -4,7 +4,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: bosh/main-ruby-go
+    #repository: bosh/main-ruby-go
+    repository: bosh/cli
     tag: 'latest'
 
 inputs:
