--- a/ci/pipelines/gnatsd/tasks/test.yml
+++ b/ci/pipelines/gnatsd/tasks/test.yml
@@ -4,8 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    #repository: bosh/main-ruby-go
-    repository: bosh/cli
+    repository: bosh/main-ruby-go
     tag: 'latest'
 
 inputs:
