--- a/ci/pipelines/gnatsd/pipeline.yml
+++ b/ci/pipelines/gnatsd/pipeline.yml
@@ -9,6 +9,7 @@ jobs:
         - get: bosh-src
       - task: test
         file: bosh-src/ci/pipelines/gnatsd/tasks/test.yml
+        attempts: 3
 
   - name: build
     public: true
