Final release 263.1.0 from 263.x branch

--- a/.final_builds/jobs/director/index.yml
+++ b/.final_builds/jobs/director/index.yml
@@ -155,6 +155,10 @@ builds:
     version: "13"
     blobstore_id: 93e533b5-3232-4110-9083-1cce9d3ce482
     sha1: dc6ec15cb8546b3f72ed937e8b9e5e7a7efa58d7
+  7d5e5cace16c4ba31e087b5ad6b2ae9d40a3d705:
+    version: 7d5e5cace16c4ba31e087b5ad6b2ae9d40a3d705
+    blobstore_id: b0cca8a1-3510-4457-53e2-70fbdb66cd37
+    sha1: acf3b1c1779927410d6a454376f6d58edb6f6b02
   7e5a83b1435569e1b9fc90dbed018ce8b8514c2f:
     version: 7e5a83b1435569e1b9fc90dbed018ce8b8514c2f
     blobstore_id: 72bd65d7-e0de-462e-786b-39294046e22d
