--- a/releases/index.yml
+++ b/releases/index.yml
@@ -501,6 +501,8 @@ builds:
     version: "161"
   d514d2325bacf762d34a0642bb7cacd4bd61cfab:
     version: "40"
+  d550dedd-ec31-442e-61e2-a4885d15abb3:
+    version: 263.1.0
   d5cfd8f9d0c72587e65f7dd498dde62a8794dce6:
     version: "29"
   d673a62319f43c39b37db7062dec46db2cb66dff:
