--- a/.final_builds/packages/director/index.yml
+++ b/.final_builds/packages/director/index.yml
@@ -15,6 +15,10 @@ builds:
     version: 02ccf6b9e9182a1253b3738e5fba7b09ee131719
     blobstore_id: ce9b3a0e-ef3b-429e-a4f0-cbc778d8badb
     sha1: ceb78bc51310b307c4c12fb833f9b94f3e670d0e
+  030c917d1ef2455cb5d27b2f5824c9006d3a6a47:
+    version: 030c917d1ef2455cb5d27b2f5824c9006d3a6a47
+    blobstore_id: c28cd123-3776-4407-7111-c996c5985ec2
+    sha1: db9aaa8405b375f4497ae0478f14e31ec6db47ac
   036919ec39c1ff57d756fb644debadc361b99711:
     version: 036919ec39c1ff57d756fb644debadc361b99711
     blobstore_id: cea19df1-d973-42eb-9ec2-6681f2cd861d
