Revert "Allow using tarballs or release dirs for brats tests"
This reverts commit 8ef04fd7c111c80e54e3df2219349900350314d1.

Signed-off-by: Tyler Schultz <tschultz@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -774,9 +774,10 @@ resources:
       region_name: {{bosh_cli_aws_s3_release_bucket_region}}
 
   - name: dns-release
-    type: bosh-io-release
+    type: git
     source:
-      repository: cloudfoundry/dns-release
+      uri: https://github.com/cloudfoundry/dns-release
+      branch: master
 
   #
   # BATS
