--- a/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/dns-with-templates-manifest.yml
+++ b/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/dns-with-templates-manifest.yml
@@ -13,7 +13,7 @@ instance_groups:
   azs: [z1]
   jobs:
   - name: bosh-dns
-    release: bosh-dns-release
+    release: bosh-dns
   - name: query-with-az-filter
     release: linked-template-release
   - name: query-all
@@ -26,7 +26,7 @@ instance_groups:
 - name: provider
   jobs:
   - name: bosh-dns
-    release: bosh-dns-release
+    release: bosh-dns
   - name: link-provider
     release: linked-template-release
   instances: 3
@@ -37,7 +37,7 @@ instance_groups:
   - name: default
 
 releases:
-- name: bosh-dns-release
+- name: bosh-dns
   version: create
   url: file://((dns-release-path))
 - name: linked-template-release
